# ProcessInfoView-

./: README.md
appProcesses/src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
appProcesses/src/process/: Logger.cpp  Logger.h  ProcessInfo.h  ProcessInformationHandler.cpp  ProcessInformationHandler.h  ProcessModel.cpp  ProcessModel.h
